# exosim

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build_optimization.yml  performance_monitoring.yml  security_scan.yml  static_analysis.yml
deployment/docker/: Dockerfile.dev  docker-compose.dev.yml
scripts/: struct.txt
src/exoforge_bringup/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_bringup/exoforge_bringup/: __init__.py
src/exoforge_bringup/include/exoforge_bringup/: bringup_node.hpp
src/exoforge_bringup/src/: bringup_node.cpp
src/exoforge_control/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_control/exoforge_control/: __init__.py
src/exoforge_control/include/exoforge_control/: control_node.hpp
src/exoforge_control/src/: control_node.cpp
src/exoforge_core/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_core/exoforge_core/: __init__.py
src/exoforge_core/include/exoforge_core/: core_node.hpp
src/exoforge_core/src/: core_node.cpp
src/exoforge_description/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_description/blender/: README.md
src/exoforge_description/meshes/anatomical/jaw/: README.md
src/exoforge_description/meshes/anatomical/jaw/discs/: tmj_disc_left.fTetWild.msh  tmj_disc_right.fTetWild.msh
src/exoforge_description/mjcf/anatomical/jaw/: jaw_model_hybrid.xml  jaw_model_mesh_constr.xml  jaw_model_rigid.xml  jaw_model_rigid_auto_range.xml  jaw_skin_model.xml  tmj_disc_collision_test.xml
src/exoforge_description/mjcf/exoskeleton/jaw/: jaw_exo_model.xml  jaw_exo_model_wo_skin.xml
src/exoforge_description/mjcf/templates/: template.xml
src/exoforge_interfaces/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_interfaces/exoforge_interfaces/: __init__.py
src/exoforge_interfaces/include/exoforge_interfaces/: interfaces_node.hpp
src/exoforge_interfaces/src/: interfaces_node.cpp
src/exoforge_pligin/: ARCHITECTURE.md  QUICK_REFERENCE.txt  README.md  __init__.py  erg_plugin.py  erg_plugin_core.py  erg_recorder.py  erg_visualization.py  test.py  test_new.py  viewer_realtime_plot.py
src/exoforge_pligin/erg_outputs/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz
src/exoforge_pligin/erg_test/superficial_20251207_171638/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz
src/exoforge_pligin/erg_test/superficial_20251207_171826/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz  superficial_masseter_right_erg.csv  superficial_masseter_right_erg.npz
src/exoforge_pligin/erg_test/superficial_20251207_172210/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz  superficial_masseter_right_erg.csv  superficial_masseter_right_erg.npz
src/exoforge_pligin/erg_test/superficial_20251207_180403/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz  superficial_masseter_right_erg.csv  superficial_masseter_right_erg.npz
src/exoforge_pligin/erg_test/superficial_20251207_180421/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz  superficial_masseter_right_erg.csv  superficial_masseter_right_erg.npz
src/exoforge_pligin/erg_test/superficial_20251207_225511/: superficial_masseter_left_erg.csv  superficial_masseter_left_erg.npz  superficial_masseter_right_erg.csv  superficial_masseter_right_erg.npz
src/exoforge_safety/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_safety/exoforge_safety/: __init__.py
src/exoforge_safety/include/exoforge_safety/: safety_node.hpp
src/exoforge_safety/src/: safety_node.cpp
src/exoforge_sensing/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_sensing/exoforge_sensing/: __init__.py
src/exoforge_sensing/include/exoforge_sensing/: sensing_node.hpp
src/exoforge_sensing/src/: sensing_node.cpp
src/exoforge_simulation/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_simulation/exoforge_simulation/: __init__.py
src/exoforge_simulation/include/exoforge_simulation/: simulation_node.hpp
src/exoforge_simulation/src/: simulation_node.cpp
src/exoforge_therapy/: CMakeLists.txt  package.xml  struct.txt
src/exoforge_therapy/exoforge_therapy/: __init__.py
src/exoforge_therapy/include/exoforge_therapy/: therapy_node.hpp
src/exoforge_therapy/src/: therapy_node.cpp
src/exoforge_utilities/: README.md  add_sites_from_vertices.py  extract_vertices.py  mesh_converter.py  mesh_validate.py  remove_string.py  transform_mjcf.py  transform_msh.py  transform_obj.py  update_flex_vertex_bodies.py
src/exoforge_utilities/blender-utils/: core.py  visualize_trajectory.py
src/implementations/exoforge_jaw/: CMakeLists.txt  struct.txt
src/implementations/exoforge_jaw/exoforge_jaw/: __init__.py
src/implementations/exoforge_jaw/mjcf/: jaw_exoskeleton.xml
(+9 files in other folders)
