<package format="3">
  <name>exoforge_simulation</name>
  <version>1.0.0</version>
  <description>A package for simulating biomechanical systems and exoskeletons.</description>
  <maintainer email="muellerpaulotto@gmail.com">Paul-Otto Mueller</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>